...
                                            <constraint firstAttribute="height" constant="45" id="9WT-FO-OSB"/>
                                            <constraint firstAttribute="width" constant="45" id="Ply-5Q-jCh"/>
                                        </constraints>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" image="big_comment"/>
                                        <connections>
                                            <action selector="comment:" destination="3Uc-7d-MWS" eventType="touchUpInside" id="0dH-ko-EVD"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="epo-ml-X2c">
                                        <rect key="frame" x="16" y="54" width="288" height="28"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="View people who like this">
...
                                        <rect key="frame" x="24" y="33" width="132" height="28"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="28" id="qfy-7M-WcS"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                                        <state key="normal" title="SIGN IN">
                                            <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                <real key="value" value="14"/>
                                            </userDefinedRuntimeAttribute>
...
                                        <rect key="frame" x="272" y="9" width="40" height="40"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="40" id="AfQ-ax-aLn"/>
                                            <constraint firstAttribute="height" constant="40" id="Ylc-HG-3WS"/>
                                        </constraints>
                                        <state key="normal" image="send"/>
                                        <connections>
                                            <action selector="send_Comment:" destination="rTF-Ma-rfV" eventType="touchUpInside" id="Kgl-Ob-YRt"/>
                                            <action selector="send_Comment:" destination="OKW-y5-nho" eventType="touchUpInside" id="nmL-8T-ZIV"/>
                                        </connections>
                                    </button>
                                </subviews>
...
                            <constraint firstItem="44m-Pd-0FQ" firstAttribute="leading" secondItem="V7M-VR-TpV" secondAttribute="leading" id="sjw-7d-ocG"/>
                            <constraint firstAttribute="trailing" secondItem="44m-Pd-0FQ" secondAttribute="trailing" id="tKB-G2-TfO"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="9f9-Og-fMY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Comments" leftItemsSupplementBackButton="YES" id="Dzr-Iu-5mN">
                        <barButtonItem key="backBarButtonItem" title="Back" id="1yF-Zu-gQe"/>
                        <barButtonItem key="leftBarButtonItem" image="back" id="HgA-SS-7mD">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="Back_btn:" destination="rTF-Ma-rfV" id="DFS-bK-8EH"/>
                            </connections>
                        </barButtonItem>
...
