...
                                                <color key="tintColor" red="0.72156862749999995" green="0.73725490199999999" blue="0.90588235289999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="20" id="ejI-w6-haK"/>
                                                    <constraint firstAttribute="width" constant="18" id="hoI-G9-Jnp"/>
                                                </constraints>
                                            </imageView>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" adjustsFontSizeToFit="NO" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="leT-tl-Uoa" customClass="SkyFloatingLabelTextField" customModule="SkyFloatingLabelTextFiel
                                                <rect key="frame" x="42" y="210" width="243" height="40"/>
                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <color key="tintColor" red="1" green="1" blue="1" alpha="0.6893461044520548" colorSpace="calibratedRGB"/>
                                                <accessibility key="accessibilityConfiguration">
                                                    <accessibilityTraits key="traits" allowsDirectInteraction="YES"/>
                                                </accessibility>
...
                                                    </userDefinedRuntimeAttribute>
                                                    <userDefinedRuntimeAttribute type="color" keyPath="selectedTitleColor">
                                                        <color key="value" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="chv-co-HG7" customClass="SkyFloatingLabelTextField" customModule="SkyFloatingLabelTextField">
                                                <rect key="frame" x="44" y="260" width="241" height="40"/>
                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <color key="tintColor" red="1" green="1" blue="1" alpha="0.6893461044520548" colorSpace="calibratedRGB"/>
                                                <accessibility key="accessibilityConfiguration">
                                                    <accessibilityTraits key="traits" allowsDirectInteraction="YES"/>
                                                </accessibility>
...
                                                <rect key="frame" x="35" y="340" width="250" height="40"/>
                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="RlY-G4-hA8"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                                <state key="normal" title="Login">
                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                        <real key="value" value="20"/>
                                                    </userDefinedRuntimeAttribute>
...
