...
    
    override func viewDidLoad() {
        super.viewDidLoad()
 
       // self.title = "Photo Maps"
       
        self.title = "Photos Map"
        if NetworkController.others_front_user_id != "0"{
            Fetch_Photo_Map(front_user_id: NetworkController.others_front_user_id)
        }else{
            Fetch_Photo_Map(front_user_id: NetworkController.front_user_id)
        }
        
...
